[metadata]
name = Flask-Loopback
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
summary = Library for faking HTTP requests using flask applications without actual network operations
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/vmalloc/flask-loopback

[extras]
testing =
    pytest
    astroid~=1.5.3; python_version=='2.7'
    astroid>=2.0; python_version >= '3.4'
    pylint~=1.7.2; python_version=='2.7'
    pylint~=2.3.1; python_version >= '3.4'

[tool:pytest]
testpaths = tests
